# ToDoApp

./: .gitignore  README.md
ToDoApp.Api/: CHANGELOG.md  ToDoApp-Api.cabal  cabal.project.local  default.nix  project.nix
ToDoApp.Api/benchmarks/: Benchmarks.hs
ToDoApp.Api/src/: Main.hs  MyLib.hs  ToDoApi.hs  ToDoHandlers.hs
ToDoApp.Api/src/Config/: ConfigUtil.hs
ToDoApp.Api/src/Data/: PostgresDataStore.hs
ToDoApp.Api/src/Handlers/: ToDoHandlers.hs
ToDoApp.Api/src/Models/: ToDoItemModel.hs  ToDoItemResponse.hs
ToDoApp.Api/test/: MyTestsSpec.hs
ToDoApp.Client/src/App/: Button.purs
todoapp.client/: package-lock.json  package.json
