cabal-version:      2.4
name:               ToDoApp-Api
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Philg112

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable ToDoApp-Api
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        ToDoApi,
        ToDoHandlers,
        Models.ToDoItemModel
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.1.0,
        servant,
        servant-server,
        time,
        aeson,
        warp,
        text,
        bytestring

    hs-source-dirs:   src
    default-language: Haskell2010
