cabal-version:      3.6
name:               ToDoApp-Api
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Philg112

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable ToDoApp-Api
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        ToDoApi,
        Models.ToDoItemModel,
        Models.ToDoItemResponse,
        Handlers.ToDoHandlers,
        Data.PostgresDataStore,
        Config.ConfigUtil
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.16.4.0,
        servant,
        servant-server,
        time,
        aeson,
        warp,
        text,
        bytestring,
        postgresql-simple,
        config-ini
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite spec
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    ghc-options: -Wall
    hs-source-dirs:
        test
    build-depends:
        base
        , hspec
        , hspec-discover
    other-modules:
        MyTestsSpec
    default-language: Haskell2010
    build-tool-depends: hspec-discover:hspec-discover