cabal-version:      3.6
name:               ToDoApp-Api
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Philg112

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable ToDoApp-Api
    main-is:          Main.hs
    -- http://nikita-volkov.github.io/profiling-cabal-projects/
    ghc-options:

        -- Profiling section, common and uncomment as needed.
        -- Aggressive optimization
        -- -O2 
        -- -- Enables concurrency
        -- -threaded
        -- -- Tell GHC to profile
        -- -prof
        -- -- Enable auto cost-centre annotations for profiling (https://downloads.haskell.org/~ghc/7.8.2/docs/html/users_guide/prof-compiler-options.html)
        -- -fprof-auto
        -- -- The runtime Settings:
        --     -- -N = num of cores set to max
        --     -- -p = Generate a .prof
        --     -- -s = outputs report on gc
        --     -- -hy = Breaks down the graph by type. (https://downloads.haskell.org/~ghc/7.8.2/docs/html/users_guide/prof-heap.html)
        --     -- -l-agu = esult in a significantly smaller eventlog as it will not include thread events. This makes a big difference for multi-threaded applications.
        --     -- -i0.1 = sets the sampling frequency of memory profiling to every tenth of a second.
        -- "-with-rtsopts=-N -p -s -hy -l-agu -i0.1"
    -- Modules included in this executable, other than Main.
    other-modules:
        ToDoApi,
        Models.ToDoItemModel,
        Models.ToDoItemResponse,
        Handlers.ToDoHandlers,
        Data.PostgresDataStore,
        Config.ConfigUtil
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.16.4.0,
        servant,
        servant-server,
        time,
        aeson,
        warp,
        text,
        bytestring,
        postgresql-simple,
        config-ini,
        mtl
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite spec
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    ghc-options: -Wall
    hs-source-dirs:
        test
    build-depends:
        base
        , hspec
        , hspec-discover
    other-modules:
        MyTestsSpec
    default-language: Haskell2010
    build-tool-depends: hspec-discover:hspec-discover